# target_simulation

./: README.md  melodic_npm_setup.sh  noetic_npm_setup.sh
target_control/: package.json
target_control/public/: index.html  manifest.json
target_control/src/: App.js  Dev.js  Navbar.js  VictimDrone.js  drogone.css  index.js
target_drone/: CMakeLists.txt  package.xml
target_drone/include/: target_drone.h
target_drone/launch/: target_drone.launch
target_drone/src/: target_drone.cc  target_drone_node.cc
target_gazebo/: CMakeLists.txt  package.xml
target_gazebo/include/target_gazebo/: gazebo_position_from_ros.h
target_gazebo/launch/: spawn_target.launch
target_gazebo/msgs/: ConnectRosToGazeboTopic.proto
target_gazebo/src/: gazebo_position_from_ros.cpp
target_gazebo/urdf/: target_drone.xacro
target_gazebo/worlds/: basic.world
target_srvs/: CMakeLists.txt  package.xml
target_srvs/srv/: TargetDroneCaught.srv  TargetDroneCircular.srv  TargetDroneEight.srv  TargetDroneLinear.srv  TargetDroneStartPos.srv  TargetDroneStop.srv
