<?xml version="1.0"?>
<package format="2">
  <name>target_srvs</name>
  <version>0.0.0</version>
  <description>
    ROS services for Target Drone
  </description>

  <maintainer email="luca.straessle@ethz-asl.ch">Luca Strässle</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
